margin added to menu buttons

--- a/src/app/core/layout/app.topbar.component.html
+++ b/src/app/core/layout/app.topbar.component.html
@@ -1,21 +1,23 @@
 <div class="layout-topbar">
 
 
-    <button #menubutton class="p-link layout-menu-button layout-topbar-menu-mobile-active" [routerLink]="['']">
+    <button #menubutton class="p-link layout-menu-button layout-topbar-menu-mobile-active m-3" [routerLink]="['']">
         Home
     </button>
-    <button #menubutton class="p-link layout-menu-button layout-topbar-menu-mobile-active" [routerLink]="['/about-me']">
+    <button #menubutton class="p-link layout-menu-button layout-topbar-menu-mobile-active m-3"
+        [routerLink]="['/about-me']">
         About me
     </button>
-    <button #menubutton class="p-link layout-menu-button layout-topbar-menu-mobile-active"
+    <button #menubutton class="p-link layout-menu-button layout-topbar-menu-mobile-active m-3"
         [routerLink]="['/contact-me']">
         Contact me
     </button>
-    <button #menubutton class="p-link layout-menu-button layout-topbar-menu-mobile-active" [routerLink]="['/my-links']">
+    <button #menubutton class="p-link layout-menu-button layout-topbar-menu-mobile-active m-3"
+        [routerLink]="['/my-links']">
         My links
     </button>
 
-    <button #menubutton class="p-link layout-menu-button layout-topbar-menu-mobile-active"
+    <button #menubutton class="p-link layout-menu-button layout-topbar-menu-mobile-active m-3"
         [routerLink]="['/my-projects']">
         My Projects
     </button>
