--- a/src/app/core/layout/app.topbar.component.html
+++ b/src/app/core/layout/app.topbar.component.html
@@ -5,20 +5,20 @@
         Home
     </button>
     <button #menubutton class="p-link layout-menu-button layout-topbar-menu-mobile-active m-3"
-        [routerLink]="['/about-me']">
+        [routerLink]="['about-me']">
         About me
     </button>
     <button #menubutton class="p-link layout-menu-button layout-topbar-menu-mobile-active m-3"
-        [routerLink]="['/contact-me']">
+        [routerLink]="['contact-me']">
         Contact me
     </button>
     <button #menubutton class="p-link layout-menu-button layout-topbar-menu-mobile-active m-3"
-        [routerLink]="['/my-links']">
+        [routerLink]="['my-links']">
         My links
     </button>
 
     <button #menubutton class="p-link layout-menu-button layout-topbar-menu-mobile-active m-3"
-        [routerLink]="['/my-projects']">
+        [routerLink]="['my-projects']">
         My Projects
     </button>
 
