--- a/src/app/core/pages/aboutme/aboutme.component.html
+++ b/src/app/core/pages/aboutme/aboutme.component.html
@@ -18,13 +18,13 @@
 
     <div class="flex justify-content-center flex-order-1 sm:flex-order-2 col-12 lg:col-6 bg-100 p-0"
         style="border-radius:8px;">
-        <img src="assets/images/colosseum.jpg" class="w-full h-auto" alt="colosseum">
+        <img lazyLoad="assets/images/colosseum.jpg" class="w-full h-auto" alt="colosseum">
     </div>
 </div>
 <div class="grid mt-2 pb-2 md:pb-8">
     <div class="flex justify-content-center col-12 lg:col-6 bg-100 p-0 flex-order-1 lg:flex-order-0"
         style="border-radius:8px;">
-        <img src="assets/images/venedikfoto.jpg" class="w-full h-auto" alt="venedik">
+        <img lazyLoad="assets/images/venedikfoto.jpg" class="w-full h-auto" alt="venedik">
     </div>
 
     <div class="col-12 lg:col-6 my-auto flex flex-column lg:align-items-end text-center lg:text-right">
@@ -53,6 +53,6 @@
     </div>
     <div class="flex justify-content-center flex-order-1 sm:flex-order-2 col-12 lg:col-6 bg-100 p-0"
         style="border-radius:8px;">
-        <img src="assets/images/kayakfoto.jpg" class="w-full h-auto" alt="kayak">
+        <img lazyLoad="assets/images/kayakfoto.jpg" class="w-full h-auto" alt="kayak">
     </div>
 </div>
