--- a/src/app/core/pages/home/home.component.html
+++ b/src/app/core/pages/home/home.component.html
@@ -10,7 +10,7 @@
 
     <div class="flex justify-content-center col-12 lg:col-6 bg-100 p-0 flex-order-1 lg:flex-order-0"
         style="border-radius:8px;">
-        <img src="assets/images/venedikfoto.jpg" class="w-full h-auto" alt="venedik"
+        <img lazyLoad="assets/images/venedikfoto.jpg" class="w-full h-auto" alt="venedik"
             style="clip-path: polygon(5% 0, 100% 0%, 100% 100%, 0 100%)">
     </div>
 </div>
