cv and link update

--- a/src/app/core/pages/my-links/my-links.component.html
+++ b/src/app/core/pages/my-links/my-links.component.html
@@ -24,7 +24,7 @@
             <span class="text-700 line-height-3">Explore my projects and contributions on GitHub.</span>
         </div>
         <div class="col-12 md:col-4 mb-4 px-5">
-            <a href="https://www.instagram.com/akgulonur6071/" target="_blank">
+            <a href="https://www.instagram.com/onurerenakgul" target="_blank">
                 <span class="p-3 shadow-2 mb-3 inline-block surface-card" style="border-radius: 10px">
                     <i class="pi pi-instagram text-4xl text-blue-500"></i>
                 </span></a>
@@ -50,7 +50,7 @@
             <span class="text-700 line-height-3">Follow me on Twitter for updates and thoughts.</span>
         </div>
         <div class="col-12 md:col-4 mb-4 px-5">
-            <a href="assets/pdf/Onur-Eren-AKGÜL-Resume-20240418.pdf" target="_blank">
+            <a href="assets/pdf/Onur-Eren-AKGÜL-Resume-15072024.pdf" target="_blank">
                 <span class="p-3 shadow-2 mb-3 inline-block surface-card" style="border-radius: 10px">
                     <i class="pi pi-file-pdf text-4xl text-blue-500"></i>
                 </span></a>
