--- a/src/app/core/pages/aboutme/aboutme.component.html
+++ b/src/app/core/pages/aboutme/aboutme.component.html
@@ -10,10 +10,11 @@
             <i class="pi pi-fw pi-info text-5xl text-yellow-700"></i>
         </div>
         <h2 class="line-height-1 text-900 text-4xl font-normal">About Me</h2>
-        <span class="text-700 text-2xl line-height-3 mr-0 md:mr-2" style="max-width:650px;">Hello, I am Onur Eren Akgül,
-            currently studying Computer Engineering at Bartin University as a 4th-grade student. I have been using Java
-            for 2.5 years and have some experience with the C# language. Currently working on an Android app project
-            using Java.</span>
+        <span class="text-700 text-2xl line-height-3 mr-0 md:mr-2" style="max-width:650px;">Hello, I am Onur Eren Akgül.
+            I have completed my education with a degree in Computer Engineering from Bartin
+            University.<br> During my internship as a frontend developer at Larinsoft Bilişim Teknoloji A.Ş.,
+
+            I gained valuable experience in creating web applications.</span>
     </div>
 
     <div class="flex justify-content-center flex-order-1 sm:flex-order-2 col-12 lg:col-6 bg-100 p-0"
@@ -34,7 +35,7 @@
         </div>
         <h2 class="line-height-1 text-900 text-4xl font-normal">Education</h2>
         <span class="text-700 text-2xl line-height-3 ml-0 md:ml-2" style="max-width:650px;">B.S. in Computer
-            Engineering, Bartin University<br>08/2019 – present | Bartin, Turkey <br>B.S. in Computer Science,
+            Engineering, Bartin University<br>08/2019 – 06/2024 | Bartin, Turkey <br>B.S. in Computer Science,
             Politechnika Świętokrzyska<br>10/2022 – 02/2023 | Kielce, Poland</span>
     </div>
 </div>
@@ -46,8 +47,10 @@
         </div>
         <h2 class="line-height-1 text-900 text-4xl font-normal">Skills and Interests</h2>
         <span class="text-700 text-2xl line-height-3 mr-0 md:mr-2" style="max-width:650px;">
-            <h4>Coding skills</h4> Java (Intermediate), C# (Lower-Intermediate), C (Beginner Level), MSSQL, MYSQL
-            (Beginner), ASP.NET (Beginner) <br>
+            <h4>Coding skills</h4> Angular (Intermediate), ASP.NET
+            (Lower-Intermediate), C# (Lower-Intermediate), Microsoft SQL (Lower-Intermediate), MSSQL
+            (Lower-Intermediate), Java (Lower-Intermediate), MYSQL
+            (Beginner), <br> C (Beginner) <br>
             <h4>Interests</h4>Bowling, Basketball, Motorsports
         </span>
     </div>
